--- a/mahjong/templates/base/menu.html
+++ b/mahjong/templates/base/menu.html
@@ -1,2 +1,5 @@
 <a class='menu_item' href='/'>메인페이지</a>
+{% if perms.records.submit_records %}
+<a class='menu_item' href='/submit_record'>기록 입력</a>
+{% endif %}
 <a class='menu_item' href='/logout_proc'>로그아웃</a>
