--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,8 +52,8 @@ img {
     text-decoration:none;
     line-height:40px;
     height:40px;
-    padding:0px 15px;
-    margin-right:5px;
+    padding:0px;
+    margin-right:15px;
 }
 #Container div.menu a.menu_item:hover {
     cursor:pointer;
