Finish submit_record page.
Committed by noraesae.

+ start records page.

--- a/mahjong/templates/base/menu.html
+++ b/mahjong/templates/base/menu.html
@@ -1,4 +1,5 @@
 <a class='menu_item' href='/'>메인페이지</a>
+<a class='menu_item' href='/records'>기록 확인</a>
 {% if perms.records.submit_records %}
 <a class='menu_item' href='/submit_record'>기록 입력</a>
 {% endif %}
