--- a/mahjong/templates/base.html
+++ b/mahjong/templates/base.html
@@ -3,9 +3,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>마작 통계 서비스</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type='text/javascript'></script>
-        <!-- not used now.
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js" type='text/javascript'></script>
-        -->
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-lightness/jquery-ui.css" type="text/css" media="all" />
         <link href='/static/css/base.css' rel='stylesheet' type='text/css' />
         {% block header %}{% endblock %}
     </head>
