Add a page to change password.
Committed by noraesae.

--- a/mahjong/templates/base/menu.html
+++ b/mahjong/templates/base/menu.html
@@ -3,4 +3,5 @@
 {% if perms.records.submit_records %}
 <a class='menu_item' href='/submit_record'>기록 입력</a>
 {% endif %}
+<a class='menu_item' href='/change_passwd'>비밀번호 변경</a>
 <a class='menu_item' href='/logout_proc'>로그아웃</a>
