--- a/mahjong/templates/pages/submit_record.html
+++ b/mahjong/templates/pages/submit_record.html
@@ -38,7 +38,7 @@
         <div class='replay_url'>
             <div class='tag'>리플레이 주소</div>
             <div class='description'>없으면 입력 안해도 됩니다.</div>
-            <div class='input'><input type='text' class='text' value='{{ record.replay_url }}' name='replay_url' style='width:400px;' /></div>
+            <div class='input'><input type='text' class='text' value='{% if record.replay_url %}{{ record.replay_url }}{% endif %}' name='replay_url' style='width:400px;' /></div>
         </div>
         <div class='match_type'>
             <div class='tag'>대국 종류</div>
