--- a/mahjong/templates/base/menu.html
+++ b/mahjong/templates/base/menu.html
@@ -4,4 +4,7 @@
 <a class='menu_item' href='/submit_record'>기록 입력</a>
 {% endif %}
 <a class='menu_item' href='/change_passwd'>비밀번호 변경</a>
+{% if user.is_staff %}
+<a class='menu_item' href='/backupdb_proc'>데이터베이스 백업</a>
+{% endif %}
 <a class='menu_item' href='/logout_proc'>로그아웃</a>
