--- a/mahjong/templates/base.html
+++ b/mahjong/templates/base.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+         <link rel="shortcut icon" href="/static/favicon.ico" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>마작 통계 서비스</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type='text/javascript'></script>
