Start to create record stat page.
Committed by noraesae.

--- a/mahjong/templates/base/menu.html
+++ b/mahjong/templates/base/menu.html
@@ -1,5 +1,6 @@
 <a class='menu_item' href='/'>메인페이지</a>
 <a class='menu_item' href='/records'>기록 확인</a>
+<a class='menu_item' href='/stats'>기록 통계</a>
 {% if perms.records.submit_records %}
 <a class='menu_item' href='/submit_record'>기록 입력</a>
 {% endif %}
