Change footer layout.
Committed by noraesae.

--- a/mahjong/templates/base.html
+++ b/mahjong/templates/base.html
@@ -20,7 +20,7 @@
             <div class='contents'>
                 {% block contents %}{% endblock %}
             </div>
-            <div class='footer hotpink'>noraesae@yuiazu.net | powered by yuiazu.net</div>
+            <div class='footer'><span class='footer-item'>noraesae@yuiazu.net</span><span class='footer-item'>powered by yuiazu.net</span><a class='footer-item' href='https://github.com/noraesae/mahjong-statics'>hosted by github</a></div>
         </div>
         {% block additional %}{% endblock %}
     </body>
