Update the index page.
Committed by noraesae.

--- a/mahjong/templates/pages/index.html
+++ b/mahjong/templates/pages/index.html
@@ -1,4 +1,23 @@
 {% extends "base.html" %}
+{% block header %}
+    <style>
+        p { color: #444; }
+        ul {}
+        ul li {margin-top:3px; margin-bottom:3px;}
+    </style>
+{% endblock %}
 {% block contents %}
-    <div>temp?</div>
+    <div class='subtitle'>마작 통계 서비스?</div>
+    <div class='description'>이 서비스는 간단하게 마작 점수를 기록하고, 그 기록 및 통계를 확인하기 위해 만들어졌습니다.</div>
+    <p>처음 입장하신 분은 비밀번호를 변경해주세요.</p>
+    <p>각 메뉴 설명<p>
+    <ul>
+        <li>기록 확인: 대국 기록을 확인합니다. 등수, 점수 및 복기가능한 주소가 있다면 그 링크를 제공합니다.</li>
+        <li>기록 통계: 대국 기록을 바탕으로 계산된 통계들을 제공합니다.</li>
+        <li>비밀번호 변경: 비밀번호를 변경할 수 있습니다. 비밀번호는 암호화되어 저도 알수가 없습니다만 되도록 다른 곳에서 사용하지 않는 것으로 바꾸는 게 좋습니다.</li>
+        <li>로그아웃: 본 서비스는 브라우저를 종료해도 로그인상태가 유지됩니다. 로그아웃을 위해선 꼭 로그아웃 기능을 사용해주세요.</li>
+        <li>그 외: 그 외에 몇가지 권한이 필요한 기능들이 있습니다. 기록 입력권한이 필요하시면 노래새에게 말해주세요.</li>
+    </ul>
+    <p>추후에 제가 귀찮지 않다면 시각화, 개인별 통계 기능이 추가될 수도 있습니다.</p>
+    <p>이 서비스는 완전한 오픈 소스 프로젝트입니다. 소스는 github를 통해 공유됩니다. 아래 hosted by github를 참고해주세요.</p>
 {% endblock %}
